--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,8 @@ body {
   background-color: #212426;
 }
 
+
+/********************** App Container ************************/
 .app {
   padding: 4rem;
 
@@ -26,6 +28,7 @@ body {
   flex-direction: column;
 }
 
+/********************** H1 Title ************************/
 h1 {
   font-size: 3rem;
   letter-spacing: 0.9px;
@@ -40,6 +43,7 @@ h1 {
   width: fit-content;
 }
 
+/********************** Search Bar Container ************************/
 .search {
   width: 71%;
   margin: 4rem 0 2rem;
@@ -55,6 +59,7 @@ h1 {
   box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
 }
 
+/********************** Search Bar Input ************************/
 .search input {
   flex: 1;
   border: none;
@@ -68,28 +73,15 @@ h1 {
   background: #1f2123;
 }
 
+/********************** Search Icon ************************/
 .search img {
   width: 35px;
   height: 35px;
   cursor: pointer;
 }
 
-/* .search button {
-  padding: 20px 40px;
-  border-radius: 0.5rem;
-  margin-left: 15px;
-  color: #a1a1a1;
-  font-family: var(--font-raleway);
-  font-weight: 900;
-  letter-spacing: 0.75px;
-  font-size: 1.25rem;
-  cursor: pointer;
 
-  background: #1f2123;
-  -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
-  box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
-} */
-
+/********************** No Movies Found Styles ************************/
 .empty {
   width: 100%;
   margin-top: 3rem;
@@ -105,6 +97,7 @@ h1 {
   font-family: var(--font-raleway);
 }
 
+/********************** Search Bar Container ************************/
 .container {
   width: 100%;
   margin-top: 3rem;
@@ -115,6 +108,7 @@ h1 {
   flex-wrap: wrap;
 }
 
+/********************** Movie Card Styles ************************/
 .movie {
   width: 310px;
   height: 460px;
@@ -192,6 +186,7 @@ h1 {
   opacity: 1;
 }
 
+/********************** Media Queries ************************/
 @media screen and (max-width: 600px) {
   .app {
     padding: 4rem 2rem;
